--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "author": "Ankit",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "prisma": "^5.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
