--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-errors": "^2.0.0",
-    "prisma": "^5.11.0"
+    "prisma": "^5.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
