--- a/backend/package.json
+++ b/backend/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.11.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
