--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "express": "^4.18.3",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.13",
     "prisma": "^5.11.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.2"
